# ScalarRepl

./: CMakeLists.txt  README.md
ScalarRepl/: CMakeLists.txt  ScalarReplAggregates-zmick2.cpp
test_files/: Makefile  array.c  cmp-mine.ll-no-rm  cmp.c  function-call.c  function-call2.c  nested-tom.c  nested.c  simple.cpp  t-with-branches.c  t-with-branches2.c  test.c
